Mon May  5 00:05:19 BST 2008  Colin Watson  <cjwatson@debian.org>

	* gnulib: Upgrade to 20080501.

Sun May  4 23:16:59 BST 2008  Colin Watson  <cjwatson@debian.org>

	* lib/cleanup.c (sighandler, trap_signal), lib/pipeline.c
	  (pipeline_start, pipeline_pump): Zero sigaction structures before
	  using them. (I believe we set all required fields anyway; this is
	  just an extra safety catch.)

Mon Apr 28 09:54:48 BST 2008  Clytie Siddall  <clytie@riverland.net.au>

	* po/vi.po: Update from Translation Project.

Mon Apr 28 09:38:53 BST 2008  Benno Schulenberg  <benno@vertaalt.nl>

	* po/nl.po: Update from Translation Project.

Sun Apr 27 22:41:54 BST 2008  Robert Luberda  <robert@debian.org>

	* man/po4a/po/pl.po: Update from Translation Project.

Sun Apr 27 11:47:19 BST 2008  Colin Watson  <cjwatson@debian.org>

	* po/man-db.pot, po/*.po: Update (sync with 2.5.2-pre2 tarball).

Sun Apr 27 11:27:46 BST 2008  Colin Watson  <cjwatson@debian.org>

	* Version: 2.5.2-pre2.
	* po/man-db.pot, po/*.po: Update.

Sun Apr 27 11:24:24 BST 2008  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (pipeline_sigchld): assert is not
	  async-signal-safe, so avoid calling it in a signal handler and use
	  an if guard instead (Ubuntu bug #221635, although exactly why the
	  assertion is failing there is unclear).

Sun Apr 27 01:40:32 BST 2008  Colin Watson  <cjwatson@debian.org>

	* gnulib: Upgrade to 20080401.

Sun Apr 27 01:32:58 BST 2008  Colin Watson  <cjwatson@debian.org>

	* src/lexgrog.l (ko_name): Add another possible translation, seen in
	  hdparm(1).

Sun Apr 27 01:31:47 BST 2008  Colin Watson  <cjwatson@debian.org>

	* src/manconv.c (try_iconv): Don't handle //IGNORE unless this is
	  the last encoding to be tried.
	* src/encodings.c (add_manconv): Append //IGNORE to the target
	  encoding.
	* docs/NEWS: Document this.

Sun Apr 27 00:54:05 BST 2008  Colin Watson  <cjwatson@debian.org>

	Don't emit encoding conversion errors in mandb's quiet mode (Debian
	bug #473862).
